* Always show repository error even if no backup is running. * Don't do full trimming if repository error is detected. * Detect errors while doing repository trimming.